--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ dl dd a span:hover:before{
 
 	#youtube
 
-=======================================================================*/
+=======================================================================
 #movie {
 	position: relative;
 	width: 100%;
@@ -290,7 +290,7 @@ dl dd a span:hover:before{
 }
 
 
-
+*/
 
 /*=======================================================================
 
