--- a/styles/general.css
+++ b/styles/general.css
@@ -12,3 +12,8 @@ body {
   padding-right: 24px;
   background-color: rgb(248, 248, 248);
 }
+
+* {
+    font-family: "ABC Ginto Normal","Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin: 0;
+}
